# igt

./: Dockerfile.build-debian  Dockerfile.build-debian-arm64  Dockerfile.build-debian-armhf  Dockerfile.build-debian-minimal  Dockerfile.build-fedora  NEWS  README.md  meson.build
docs/: faq.md  (+1 more)
lib/: drmtest.c  drmtest.h  gpgpu_fill.c.gen.iga64_codes.c  gpgpu_shader.c  gpgpu_shader.c.gen.iga64_codes.c  gpgpu_shader.h  gpu_cmds.c  gpu_cmds.h  iga64_macros.h  igt_amd.c  igt_amd.h  igt_aux.c  igt_aux.h  igt_color.c  igt_color.h  igt_color_encoding.c  igt_color_lut.c  igt_color_lut.h  igt_core.c  igt_core.h  igt_debugfs.c  igt_debugfs.h  igt_device.c  igt_device.h  igt_device_scan.c  igt_dir.c  igt_fb.c  igt_fb.h  igt_gt.c  igt_kmod.c  igt_kms.c  igt_kms.h  igt_panthor.c  igt_panthor.h  igt_pci.c  igt_pci.h  igt_pipe_crc.c  igt_pipe_crc.h  igt_pm.c  igt_pm.h  (+26 more)
lib/amdgpu/: amd_PM4.h  amd_command_submission.c  amd_command_submission.h  amd_deadlock_helpers.c  amd_ip_blocks.c  amd_ip_blocks.h  amd_jpeg_shared.c  amd_memory.c  amd_memory.h  amd_mmd_shared.c  amd_utils.c  amd_utils.h  amdgpu_asic_addr.h
lib/amdgpu/compute_utils/: amd_dispatch.c  amd_dispatch.h  amd_dispatch_helpers.c  amd_dispatch_helpers.h  amd_gca.c  amd_gca.h
lib/amdgpu/shaders/: amd_llvm_asm.c  amd_llvm_asm.h  amd_llvm_asm_stub.c  amd_llvm_asm_stub.h  amd_shader_store.h  amd_shaders.c  amd_shaders.h
lib/i915/: intel_drrs.c  intel_drrs.h  intel_fbc.c  intel_fbc.h
lib/i915/shaders/ps/: xe3p_render_copy.asm
lib/tests/: bad_subtest_type.c  i915_perf_data_alignment.c  igt_abort.c  igt_assert.c  igt_audio.c  igt_can_fail.c  igt_can_fail_simple.c  igt_describe.c  igt_edid.c  igt_exit_handler.c  igt_facts.c  igt_hook.c  igt_ktap_parser.c  igt_nesting.c  igt_runnercomms_packets.c  igt_simple_test_subtests.c  igt_simulation.c  igt_stats.c  igt_subtest_group.c  igt_sysfs_choice.c  igt_timeout.c  igt_types.c  meson.build
lib/xe/: xe_eudebug.c  xe_eudebug.h  xe_gt.c  xe_ioctl.c  xe_ioctl.h  xe_oa.c  xe_query.c  xe_query.h  xe_spin.c  xe_spin.h  xe_sriov_admin.c  xe_sriov_admin.h  xe_sriov_provisioning.c  xe_sriov_provisioning.h  xe_util.h
lib/xe/oa-configs/: guids.xml  mdapi-xml-convert.py  oa-cri.xml  oa-metricset-codegen.py  oa_guid_registry.py  update-guids.py
tests/: Makefile.sources  core_auth.c  core_debugfs.c  core_getclient.c  core_getstats.c  core_getversion.c  core_hotunplug.c  core_setmaster.c  core_setmaster_vs_auth.c  core_sysfs.c  device_reset.c  dmabuf.c  dmabuf_sync_file.c  drm_buddy.c  drm_mm.c  drm_read.c  drm_virtgpu.c  dumb_buffer.c  fbdev.c  gem_concurrent_all.c  gem_read_read_speed.c  kms_3d.c  kms_addfb_basic.c  kms_async_flips.c  kms_atomic.c  kms_atomic_allow_modeset.c  kms_atomic_interruptible.c  kms_atomic_transition.c  kms_bw.c  kms_ccs.c  kms_color.c  kms_color_helper.c  kms_color_helper.h  kms_color_pipeline.c  kms_colorop.c  kms_colorop.h  kms_colorop_helper.c  kms_colorop_helper.h  kms_concurrent.c  kms_content_protection.c  (+63 more)
tests/amdgpu/: amd_abm.c  amd_assr.c  amd_basic.c  amd_basic_ex.c  amd_basic_multi_gpu.c  amd_bo.c  amd_bypass.c  amd_color.c  amd_cp_dma_misc.c  amd_cross_gpu_sync.c  amd_cs_nop.c  amd_cursor_overlay.c  amd_deadlock.c  amd_dispatch.c  amd_dmabuf_unload.c  amd_dp_dsc.c  amd_freesync_video_mode.c  amd_fuzzing.c  amd_gang_cs.c  amd_hotplug.c  amd_ilr.c  amd_info.c  amd_jpeg_dec.c  amd_jpeg_queue.c  amd_kfd_dmabuf_unload.c  amd_link_settings.c  amd_mall.c  amd_max_bpc.c  amd_mem.c  amd_mem_leak.c  amd_mode_switch.c  amd_module_load.c  amd_multidisplay_modeset.c  amd_odm.c  amd_pci_unplug.c  amd_plane.c  amd_prime.c  amd_psr.c  amd_pstate.c  amd_queue_reset.c  (+15 more)
tests/chamelium/: kms_chamelium_audio.c  kms_chamelium_color.c  kms_chamelium_edid.c  kms_chamelium_frames.c  kms_chamelium_helper.c  kms_chamelium_helper.h  kms_chamelium_hpd.c  kms_chamelium_sharpness_filter.c
tests/igtcube/: igtcube.c  meson.build
tests/intel/: api_intel_allocator.c  api_intel_bb.c  gem_bad_reloc.c  gem_barrier_race.c  gem_basic.c  gem_blits.c  gem_busy.c  gem_caching.c  gem_ccs.c  gem_close.c  gem_close_race.c  gem_compute.c  gem_concurrent_all.c  gem_create.c  gem_cs_tlb.c  gem_ctx_bad_destroy.c  gem_ctx_create.c  gem_ctx_engines.c  gem_ctx_exec.c  gem_ctx_freq.c  gem_ctx_isolation.c  gem_ctx_param.c  gem_ctx_persistence.c  gem_ctx_shared.c  gem_ctx_sseu.c  gem_ctx_switch.c  gem_eio.c  gem_evict_alignment.c  gem_evict_everything.c  gem_exec_alignment.c  gem_exec_async.c  gem_exec_await.c  gem_exec_balancer.c  gem_exec_basic.c  gem_exec_big.c  gem_exec_capture.c  gem_exec_create.c  gem_exec_endless.c  gem_exec_fair.c  gem_exec_fence.c  (+225 more)
tests/intel-ci/: chamelium-only.testlist  i915.blocklist.txt  i915.chamelium-only.testlist  meson.build  xe-fast-feedback-chamelium-only.testlist  xe-fast-feedback.testlist  xe-sriov-vf.blocklist.txt  xe-sriov-vm.blocklist.txt  xe.blocklist.txt  xe.bmg.core.blocklist.txt  xe.bmg.display.blocklist.txt  xe.chamelium-only.testlist  xe.fast-feedback-chamelium-only.testlist  xe.fast-feedback.testlist  xe.lnl.core.blocklist.txt  xe.lnl.display.blocklist.txt  xe.multigpu.blocklist.txt  xe.nvl.core.blocklist.txt  xe.nvl.display.blocklist.txt  xe.ptl.core.blocklist.txt  xe.ptl.display.blocklist.txt  xe.sriov-vf.blocklist.txt  xe.sriov-vm.blocklist.txt  xe.wcl.core.blocklist.txt
tests/msm/: meson.build  msm_bo.c  msm_mapping.c  msm_recovery.c  msm_shrink.c  msm_submit.c  msm_submitoverhead.c
tests/panfrost/: panfrost_gem_new.c  panfrost_get_param.c  panfrost_prime.c  panfrost_submit.c
tests/panthor/: panthor_gem.c  panthor_group.c  panthor_query.c  panthor_vm.c
tests/v3d/: v3d_create_bo.c  v3d_get_bo_offset.c  v3d_get_param.c  v3d_job_submission.c  v3d_mmap.c  v3d_perfmon.c  v3d_submit_cl.c  v3d_submit_csd.c  v3d_wait_bo.c
tests/vc4/: vc4_create_bo.c  vc4_dmabuf_poll.c  vc4_label_bo.c  vc4_lookup_fail.c  vc4_mmap.c  vc4_perfmon.c  vc4_purgeable_bo.c  vc4_tiling.c  vc4_wait_bo.c  vc4_wait_seqno.c
tests/vkms/: vkms_configfs.c
tests/vmwgfx/: vmw_execution_buffer.c  vmw_mob_stress.c  vmw_prime.c  vmw_ref_count.c  vmw_surface_copy.c  vmw_tri.c
(+77 files in other folders)
